--- a/templatemo_509_hydro/index.html
+++ b/templatemo_509_hydro/index.html
@@ -85,13 +85,15 @@ http://www.templatemo.com/tm-509-hydro
                          </div>
                     </div>
 
-                    <div class="col-md-6 col-sm-12">
+
+                     <div class="col-md-6 col-sm-12">
                          <div class="home-video">
                               <div class="embed-responsive embed-responsive-16by9">
-                                   <iframe src="https://www.youtube.com/embed/AqcjdkPMPJA" frameborder="0" allowfullscreen></iframe>
+                                   <img src="images/Hero4.jpg" >
                               </div>
                          </div>
                     </div>
+                    
                     
                </div>
           </div>
