--- a/templatemo_509_hydro/index.html
+++ b/templatemo_509_hydro/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Hydro - Landing Page Template</title>
+     <title>prog.team</title>
 <!-- 
 Hydro Template 
 http://www.templatemo.com/tm-509-hydro
@@ -106,11 +106,15 @@ http://www.templatemo.com/tm-509-hydro
                     <div class="col-md-5 col-sm-6">
                          <div class="about-info">
                               <div class="section-title">
-                                   <h2>Let us introduce</h2>
+                                   <h2>Get to know <strong><i>PROG TEAM </i> </strong></h2>
                                    <span class="line-bar">...</span>
                               </div>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                              <p>Allow us to present Prog Team, an exceptional pair of computer engineering students from Morocco, currently residing in Turkey. Our main objective revolves around crafting revolutionary desktop applications, state-of-the-art websites, and captivating online portfolios. We possess specialized knowledge in developing smart contracts and various other programming projects. Our team exudes an unwavering passion for delivering top-notch programming services to our esteemed clients, consistently striving for excellence by leveraging cutting-edge technologies and programming languages. Over time, we have cultivated a strong standing as a reputable and dependable partner within the programming community.
+
+
+
+                              </p>
+                              
                          </div>
                     </div>
 
