--- a/templatemo_509_hydro/index.html
+++ b/templatemo_509_hydro/index.html
@@ -89,7 +89,7 @@ http://www.templatemo.com/tm-509-hydro
                      <div class="col-md-6 col-sm-12">
                          <div class="home-video">
                               <div class="embed-responsive embed-responsive-16by9">
-                                   <img src="images/Hero4.jpg" >
+                                   <img src="images/hero5.png" >
                               </div>
                          </div>
                     </div>
@@ -158,7 +158,7 @@ http://www.templatemo.com/tm-509-hydro
 
 
      <!-- BLOG -->
-     <!-- <section id="blog" data-stellar-background-ratio="0.5">
+     <section id="blog" data-stellar-background-ratio="0.5">
           <div class="container">
                <div class="row">
 
@@ -231,7 +231,7 @@ http://www.templatemo.com/tm-509-hydro
                     
                </div>
           </div>
-     </section> -->
+     </section>
 
 
      <!-- WORK -->
