--- a/templatemo_509_hydro/index.html
+++ b/templatemo_509_hydro/index.html
@@ -43,7 +43,7 @@ http://www.templatemo.com/tm-509-hydro
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand">Hydro</a>
+                    <a href="index.html" class="navbar-brand">WebCrafters</a>
                </div>
 
                <!-- MENU LINKS -->
@@ -355,7 +355,7 @@ http://www.templatemo.com/tm-509-hydro
 
                     <div class="col-md-5 col-sm-12">
                          <div class="footer-thumb footer-info"> 
-                              <h2>Hydro Company</h2>
+                              <h2>WebCrafters Company</h2>
                               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                          </div>
                     </div>
@@ -394,7 +394,7 @@ http://www.templatemo.com/tm-509-hydro
                          <div class="footer-bottom">
                               <div class="col-md-6 col-sm-5">
                                    <div class="copyright-text"> 
-                                        <p>Copyright &copy; 2017 Your Company</p>
+                                        <p>Copyright &copy; 2023 WebCrafters</p>
                                    </div>
                               </div>
                               <div class="col-md-6 col-sm-7">
@@ -432,7 +432,7 @@ http://www.templatemo.com/tm-509-hydro
 
                                    <div class="col-md-12 col-sm-12">
                                         <div class="modal-title">
-                                             <h2>Hydro Co</h2>
+                                             <h2>WebCrafters  Co</h2>
                                         </div>
 
                                         <!-- NAV TABS -->
