--- a/templatemo_509_hydro/index.html
+++ b/templatemo_509_hydro/index.html
@@ -339,7 +339,7 @@ http://www.templatemo.com/tm-509-hydro
             3. Click "Share" and choose "Embed map" tab
             4. Copy only URL and paste it within the src="" field below
 	-->
-                              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.3030413476204!2d100.5641230193719!3d13.757206847615207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf51ce6427b7918fc!2sG+Tower!5e0!3m2!1sen!2sth!4v1510722015945" allowfullscreen></iframe>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48658.44205803377!2d27.92503198025554!3d40.338960065839764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14b5d377a8bfb0f1%3A0xbd33d2bd7058850e!2zQmFuZMSxcm1hLCBCYWzEsWtlc2ly!5e0!3m2!1sfr!2str!4v1683727889748!5m2!1sfr!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                          </div>
                     </div>
 
