--- a/templatemo_509_hydro/index.html
+++ b/templatemo_509_hydro/index.html
@@ -108,7 +108,7 @@ http://www.templatemo.com/tm-509-hydro
                     <div class="col-lg-12">
                          <div class="about-info">
                               <div class="section-title">
-                                   <h2>Get to know <strong><i>PROG TEAM </i> </strong></h2>
+                                   <h2>Get to know <strong><i>WebCrafters Team </i> </strong></h2>
                                    <span class="line-bar">...</span>
                               </div>
                               <p>Allow us to present Prog Team, an exceptional pair of computer engineering students from Morocco, currently residing in Turkey. Our main objective revolves around crafting revolutionary desktop applications, state-of-the-art websites, and captivating online portfolios. We possess specialized knowledge in developing smart contracts and various other programming projects. Our team exudes an unwavering passion for delivering top-notch programming services to our esteemed clients, consistently striving for excellence by leveraging cutting-edge technologies and programming languages. Over time, we have cultivated a strong standing as a reputable and dependable partner within the programming community.
