--- a/templatemo_509_hydro/index.html
+++ b/templatemo_509_hydro/index.html
@@ -312,7 +312,7 @@ http://www.templatemo.com/tm-509-hydro
                                    <input type="tel" class="form-control" placeholder="Your Phone" id="cf-number" name="cf-number" required="">
                               </div>
 
-                              <div class="col-md-6 col-sm-6">
+                              <!--<div class="col-md-6 col-sm-6">
                                    <select class="form-control" id="cf-budgets" name="cf-budgets">
                                         <option>Budget Level</option>
                                         <option>$50 to $100</option>
@@ -320,7 +320,7 @@ http://www.templatemo.com/tm-509-hydro
                                         <option>$200 or more</option>
 
                                    </select>
-                              </div>
+                              </div>-->
 
                               <div class="col-md-12 col-sm-12">
                                    <textarea class="form-control" rows="6" placeholder="Your requirements" id="cf-message" name="cf-message" required=""></textarea>
@@ -431,7 +431,7 @@ http://www.templatemo.com/tm-509-hydro
                                                        <input type="email" class="form-control" name="email" placeholder="Email" required>
                                                        <input type="password" class="form-control" name="password" placeholder="Password" required>
                                                        <input type="submit" class="form-control" name="submit" value="Submit Button">
-                                                       <a href="https://www.facebook.com/templatemo">Forgot your password?</a>
+                                                       <a href="#">Forgot your password?</a>
                                                   </form>
                                              </div>
                                         </div>
